# mcp-rss-feeds

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
src/: db.py  mcp_server.py  rss.py
src/rss_feeds/core/: orchestrator.py
src/rss_feeds/core/services/rss_finder/: base.py  manager.py  web_page.py  youtube.py
src/rss_feeds/core/services/rss_finder/favicons/: favicons_b64.py
src/rss_feeds/core/services/rss_parser/: feed_parser.py
src/rss_feeds/utils/: logger.py
