[metadata]
name = mcp-rss-feeds
version = 0.1.0
description = MCP server to manage and explore your RSS feeds through any MCP-compatible AI client
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Christian Braga

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mcp-rss-feeds = mcp_rss_feeds.server:main